public/css/custom.css
@charset "UTF-8";
@font-face {
    font-family: 'Quicksand';
    src: url('/fonts/Quicksand-Regular.ttf') format('truetype');
}
@font-face {
    font-family: 'Quicksand';
    font-weight: 700;
    src: url('/fonts/Quicksand-Bold.ttf') format('truetype');
}
@font-face {
    font-family: 'Quicksand';
    font-weight: bold;
    src: url('/fonts/Quicksand-Bold.ttf') format('truetype');
}
@font-face {
    font-family: 'Quicksand';
    font-weight: 300;
    src: url('/fonts/Quicksand-Light.ttf') format('truetype');
}

html * {
    font-family: 'Quicksand', sans-serif;
}
h1, h2 {
    font-weight: 300;
}
.navbar-laravel {
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
}
.navbar-laravel a {
    color: #ebebeb !important;
}

.navbar-brand {
    margin-top: 0.25em;
}
#navbar-brand-logo {
    height: 2em;
    margin-top: -0.25em;
    padding-right: 0.25em;
}

/* FONT AWESOME FIXES */
.fas.fa-user-cog {
    margin-left: 0.3em;
}

/* TILE MENU */
.menu-tiles {
    background: #df691a;
    width: 100%;
    line-height: 48px;
    font-size: 24px;
    text-align: right;
}
.menu-tiles.open {
    padding-left: 1em;
    background: none;
    line-height: inherit;
    font-size: inherit;
    text-align: center;
}
    .menu-tiles, .menu-tiles * {
        animation: all 1s;
    }
    .menu-tile {
        display: inline-block;
        height: 48px;
        text-align: center;
        padding: 0 0.5em;
    }
    @media(max-width: 639px) {
        .menu-tile {
            width: 48px;
            padding: 0;
        }
    }
    .menu-tile.active {
        background: #ebebeb !important;
    }
    .menu-tiles.open .menu-tile {
        padding: 1em 0;
        background: #df691a;
        box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.35);
        width: 200px;
        height: auto;
        max-width: 40%;
        margin: 0 1em 1em 0;
    }
    @media(max-width: 480px) {
        .menu-tiles.open .menu-tile:not(#menu-toggle) {
            font-size: 0.5em;
        }
    }
    .menu-tile#menu-toggle {
        width: 1.5em;
        text-shadow: 0 0 4px #000;
    }
    .menu-tiles.open #menu-toggle {
        transform: rotate(180deg);
        display: block;
        padding: 0;
        height: inherit;
        box-shadow: none;
        margin-left: -1em;
        width: 100%;
        width: calc(100% + 1em);
        max-width: 100vw;
        margin-bottom: 1em;
    }
        .menu-tiles.open #menu-toggle .fas {
            font-size: 2em;
        }
        .menu-tiles #menu-toggle p {
            display: none;
        }
        .menu-tile img {
            height: 1em;
            margin-top: -0.25em;
        }
        .menu-tiles.active .menu-tile img {
            font-size: 2em;
            height: 2em;
        }
        .menu-tile a {
            color: #ebebeb;
            text-decoration: none;
        }
        .menu-tile.active a {
            color: #df691a !important;
        }
        .menu-tiles.open .menu-tile .fas, .menu-tiles.open .menu-tile img {
            font-size: 3em;
            padding: 0.5em;
        }
        .menu-tile img {
            height: 1em;
            margin-top: -0.25em;
        }
        .menu-tiles.open .menu-tile img {
            height: 2em;
            margin-top: 0;
        }
        .menu-tile p {
            font-size: 0.5em;
            display: inline;
            position: relative;
            top: -0.4em;
        }
        @media(max-width: 639px) {
            .menu-tile p {
                display: none;
            }
        }
        .menu-tiles.open .menu-tile p {
            display: block;
            font-size: 1.5em;
            font-weight: 300;
            top: auto;
        }
        .menu-tiles.open .menu-tile.active p {
            font-weight: bold;
        }

.collage-admin-image {
    height: 30vw;
    background-position: center;
    background-size: cover;
    margin-bottom: 2em;
}
    .collage-admin-image-actions {
        position: absolute;
        bottom: 2em;
    }

